header_and_main_section

--- a/style.css
+++ b/style.css
@@ -1,12 +1,87 @@
 * {
-  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-style: normal;
+  font-family: Poppins, sans-serif;
 }
-.logo a {
+
+.container {
+  max-width: 390px;
+  height: 100vh;
+  background-image: url(images/header-shapes\ mobile@2x.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+body {
+  margin: 0;
+}
+
+header {
+  width: 100%;
+  background-color: #fff;
+}
+
+h1 {
+  width: 300px;
+  padding-top: 128px;
+  color: #172b4d;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+h2 {
+  color: #7f8cff;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 24px;
+  padding-top: 12px;
+}
+
+p {
+  width: 327px;
+  padding-top: 12px;
+  color: #172b4d;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+main {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 12px;
+}
+
+nav a {
   color: #6070ff;
   text-decoration: none;
+  line-height: 20px;
+  font-size: 18px;
+  font-weight: 700;
 }
-.navbar {
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 58px;
+}
+
+ul li {
+  list-style: none;
+}
+
+ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding-top: 12px;
 }
