added_future_features

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ nav {
   align-items: center;
   padding-left: 24px;
   padding-right: 24px;
-  padding-top: 58px;
+  padding-top: 16pt;
 }
 
 ul li {
