--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ main {
   background-repeat: no-repeat;
 }
 
+.base_section {
+  height: 718px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 68px;
+}
+
 body {
   margin: 0;
 }
@@ -33,7 +40,7 @@ h1 {
   line-height: 45px;
 }
 
-h2 {
+h3 {
   color: #7f8cff;
   font-size: 16px;
   font-style: normal;
@@ -48,12 +55,6 @@ p {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-}
-
-.base_section {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 68px;
 }
 
 nav a {
@@ -85,4 +86,104 @@ ul {
   align-items: center;
   gap: 20px;
   padding-top: 12px;
+}
+.work_section {
+  min-width: 375px;
+  height: 100vh;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: #f7f7f9;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+.card_container {
+  width: 327px;
+  height: 552px;
+  background-color: #ffffff;
+  padding-top: 16px;
+  border-radius: 16px;
+  display: grid;
+  padding: 16px;
+  align-items: start;
+  justify-items: center;
+  position: relative;
+  box-sizing: border-box;
+}
+.details_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin: auto;
+}
+h2 {
+  color: #172b4d;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+}
+.list_wrapper ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-content: center;
+}
+.list_wrapper .canopy {
+  color: #344563;
+  list-style: none;
+}
+.list_wrapper ul li {
+  color: #7a869a;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+}
+.list_wrapper ul li {
+  list-style: disc;
+}
+.details_wrapper p {
+  width: 295px;
+  height: 76px;
+  color: #344563;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+}
+.programing_languages_list {
+  padding-bottom: 20px;
+}
+.programing_languages_list ul li {
+  color: #6070FF;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  background: #EBEBFF;
+  padding: 4px 12px;
+  border-radius: 8px;
+}
+button {
+  color: #396DF2;
+  background: transparent;
+  padding: 16px;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  border: 1px solid #6070FF;
+  border-radius: 8px;
+}
+button:hover {
+  background: #6070FF;
+  color: #FFFFFF;
+  transition: .5s;
+}
+button:active {
+  color: #FFFFFF;
+  background: #2230D2;
+}
+button:disabled {
+  color: #5E6C84;
+  background: transparent;
+  border: 1px solid #C1C7D0;
 }
