--- a/style.css
+++ b/style.css
@@ -40,12 +40,13 @@ h1 {
   line-height: 45px;
 }
 
-h3 {
+h4 {
   color: #7f8cff;
   font-size: 16px;
   font-style: normal;
   line-height: 24px;
   padding-top: 12px;
+  font-weight: 400;
 }
 
 p {
@@ -91,7 +92,7 @@ ul {
 .work_section {
   min-width: 375px;
   padding-top: 130px;
-  padding-bottom: 130px;
+  padding-bottom: 114px;
   padding-left: 24px;
   padding-right: 24px;
   background-color: #f7f7f9;
@@ -206,4 +207,82 @@ button:disabled {
   color: #5e6c84;
   background: transparent;
   border: 1px solid #c1c7d0;
+}
+
+.about_myself_section {
+  min-width: 375px;
+  padding-bottom: 114px;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: #fff;
+}
+
+.about_myself_section h1 {
+  width: 200px;
+}
+
+.about_myself_section button {
+  padding: 12px;
+  gap: 10px;
+}
+
+.about_myself_section ul {
+  padding-top: 36px;
+}
+
+h3 {
+  color: black;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.title_wrapper {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about_myself_section .button_wrapper {
+  padding-top: 34px;
+  padding-bottom: 54px;
+}
+
+.programing_languages_container {
+  background: #f7f7f9;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.programing_languages_container img {
+  padding-left: 12px;
+  padding-right: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+hr {
+  border-bottom: 1px solid #dfe1e6;
+  margin-top: 23px;
+  margin-bottom: 23px;
+  width: 100%;
+}
+
+h5 {
+  color: #253858;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+}
+
+.language_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
