--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ button:disabled {
 
 .about_myself_section {
   min-width: 375px;
+  padding-top: 114px;
   padding-bottom: 114px;
   padding-left: 24px;
   padding-right: 24px;
@@ -224,7 +225,11 @@ button:disabled {
   border-top-right-radius: 100px;
 }
 
-.about_myself_section h1 {
+.about_myself_section h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
   width: 200px;
 }
 
@@ -302,11 +307,11 @@ h5 {
 
 .contact_items_container {
   background-color: #6070ff;
-  background-image: url(/images/contact\ form\ shapes-mobile.svg);
+  background-image: url(images/contact\ form\ shapes-mobile.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right;
-  padding: 60px 24px;
+  padding: 60px 24px 8px 24px;
   border-top-left-radius: 100px;
 }
 
@@ -376,4 +381,19 @@ form::placeholder {
 .button-white {
   background-color: #fff;
   color: #6070ff;
+}
+
+.home_indicator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+}
+
+.home_indicator img {
+  padding-top: 42px;
+}
+
+.contact_items_container .button_wrapper {
+  padding-top: 5px;
 }
